--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,7 @@
     "firebase": "^7.9.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-router": "^5.1.2",
     "react-scripts": "3.4.0"
   },
   "scripts": {
