--- a/app/package.json
+++ b/app/package.json
@@ -3,15 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.10.0",
+    "@react-google-maps/api": "^1.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "firebase": "^7.14.3",
+    "google-map-react": "^1.1.7",
     "moment": "^2.25.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-places-autocomplete": "^7.2.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
